--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-  <title>Website Title</title>
+  <title>Bukant</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="author" content="Author" />
