--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <p>Hello World</p>
+  <p>The website progress will be updated here.</p>
 
 <script>
   window.addEventListener("load", () => {
