--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Bukant</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="Author" />
+  <meta name="author" content="AnxSion" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Description" />
+  <meta name="description" content="The production website of the Bukant." />
   <meta name="twitter:card" content="summary" />
   <meta name="theme-color" content="black" />
   <meta name="msapplication-navbutton-color" content="black" />
@@ -18,7 +18,7 @@
   <meta property="og:image" content="image/" />
   <meta property="og:url" content="Link to your url" />
   <meta property="og:description" content="Description" />
-  <link rel="canonical" href="Link to your canonical link" />
+  <link rel="canonical" href="https://www.bukant.com/" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="stylesheet" href="css/style.css" type="text/css" />
   <link rel="preload" href="css/style.css" as="style" />
@@ -28,8 +28,10 @@
 </head>
 
 <body>
+  <nav></nav>
   <p>The website progress will be updated here.</p>
-
+  <footer></footer>
+  
 <script>
   window.addEventListener("load", () => {
   if ("serviceWorker" in navigator) {
