--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="The production website of the Bukant." />
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@anxsion" />
   <meta name="theme-color" content="black" />
   <meta name="msapplication-navbutton-color" content="black" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta property="og:title" content="Title" />
-  <meta property="og:site_name" content="Website name" />
+  <meta property="og:title" content="Bukant" />
+  <meta property="og:site_name" content="Bukant" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="image/" />
-  <meta property="og:url" content="Link to your url" />
+  <meta property="og:url" content="The production website of the Bukant." />
   <meta property="og:description" content="Description" />
   <link rel="canonical" href="https://www.bukant.com/" />
   <link rel="manifest" href="manifest.webmanifest" />
