--- a/index.html
+++ b/index.html
@@ -2,36 +2,70 @@
 <html lang="en">
   
 <head>
-  <title>Bukant</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="AnxSion" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="The production website of the Bukant." />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:creator" content="@anxsion" />
-  <meta name="theme-color" content="black" />
-  <meta name="msapplication-navbutton-color" content="black" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta property="og:title" content="Bukant" />
-  <meta property="og:site_name" content="Bukant" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="image/" />
-  <meta property="og:url" content="The production website of the Bukant." />
-  <meta property="og:description" content="Description" />
-  <link rel="canonical" href="https://www.bukant.com/" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
-  <link rel="preload" href="css/style.css" as="style" />
-  <link rel="shortcut icon" href="image/" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="image/" />
-  <script src="js/script.js"></script>
+	<title>Bukant</title>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="author" content="AnxSion" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="The production website of the Bukant." />
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:creator" content="@anxsion" />
+	<meta name="theme-color" content="black" />
+	<meta name="msapplication-navbutton-color" content="black" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta property="og:title" content="Bukant" />
+	<meta property="og:site_name" content="Bukant" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image" content="image/" />
+	<meta property="og:url" content="The production website of the Bukant." />
+	<meta property="og:description" content="Description" />
+	<link rel="canonical" href="https://www.bukant.com/" />
+	<link rel="manifest" href="manifest.webmanifest" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
+	<link rel="preload" href="css/style.css" as="style" />
+	<link rel="shortcut icon" href="image/" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="image/" />
+	<script src="js/script.js"></script>
 </head>
 
 <body>
-  <nav></nav>
-  <p>The website progress will be updated here.</p>
-  <footer></footer>
+	<nav>
+		<div>
+			<p>Categories</p>
+			<div>
+				<p>Fiction</p>
+				<p>Non-Fiction</p>
+				<p>Children's Corner</p>
+				<p>Language</p>
+				<p>Best Sellers</p>
+			</div>
+		</div>
+		<div>
+			<p>Authors</p>
+		</div>
+		<div>
+			<p>Art and Crafts</p>
+		</div>
+		<div>
+			<p>Art and Crafts</p>
+		</div>
+		<div>
+			<p>Digital Services</p>
+		</div>
+		<div>
+			<p>Blogs</p>
+		</div>
+		<div>
+			<p>About us</p>
+		</div>
+		<div>
+			<p>Terms and Conditions</p>
+		</div>
+	</nav>
+
+	<p>The website progress will be updated here.</p>
+	<footer>
+	</footer>
   
 <script>
   window.addEventListener("load", () => {
