--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
 			<p>Art and Crafts</p>
 		</div>
 		<div>
-			<p>Art and Crafts</p>
-		</div>
-		<div>
-			<p>Digital Services</p>
+			<p>Publish with us</p>
 		</div>
 		<div>
 			<p>Blogs</p>
@@ -62,17 +59,64 @@
 			<p>Terms and Conditions</p>
 		</div>
 	</nav>
-
-	<p>The website progress will be updated here.</p>
+	
+	<div>
+		<p>Catch up with our blogs</p>
+	</div>
+	
+	<div>
+		<p>Latest Release</p>
+	</div>
+	
+	<div>
+		<p>Featured Titles</p>
+	</div>
+	
+	<div>
+		<p>Upcoming Titles</p>
+	</div>
+	
+	<div>
+		<p>All time best sellers</p>
+	</div>
+	
+	<div>
+		<p>Nepali</p>
+	</div>
+	
+	<div>
+		<p>Hindi</p>
+	</div>
+	
+	<div>
+		<p>Bengali</p>
+	</div>
+	
+	<div>
+		<p>Fiction</p>
+	</div>
+	
+	<div>
+		<p>Non Fiction</p>
+	</div>
+	
+	<div>
+		<p>For the young readers</p>
+	</div>
+	
+	<div>
+		<p>Featured Artists</p>
+	</div>
+	
 	<footer>
 	</footer>
   
 <script>
-  window.addEventListener("load", () => {
-  if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("serviceworker.js");
-  }
-  });
+	window.addEventListener("load", () => {
+		if ("serviceWorker" in navigator) {
+		navigator.serviceWorker.register("serviceworker.js");
+		}
+		});
 </script>
 </body>
 
