--- a/index.html
+++ b/index.html
@@ -29,83 +29,40 @@
 </head>
 
 <body>
-	<nav>
-		<div>
-			<p>Categories</p>
-			<div>
-				<p>Fiction</p>
-				<p>Non-Fiction</p>
-				<p>Children's Corner</p>
-				<p>Language</p>
-				<p>Best Sellers</p>
-			</div>
-		</div>
-		<div>
-			<p>Authors</p>
-		</div>
-		<div>
-			<p>Art and Crafts</p>
-		</div>
-		<div>
-			<p>Publish with us</p>
-		</div>
-		<div>
-			<p>Blogs</p>
-		</div>
-		<div>
-			<p>About us</p>
-		</div>
-		<div>
-			<p>Terms and Conditions</p>
-		</div>
+	<nav id="navigation">
+		<img class="logoOfficial" src="" alt="The official logo of Bukant.">
 	</nav>
 	
-	<div>
-		<p>Catch up with our blogs</p>
+	<div class="categorySection">
+		<div class="categoryContainer">
+		</div>
 	</div>
 	
-	<div>
-		<p>Latest Release</p>
+	<div class="blogSection">
+		<h1>Catch up with our blog</h1>
+		<div class="blogContainer">
+			<img src="" alt="Blog image description">
+			<h2>Blog Description</h2>
+			<p>Read</p>
+		</div>
 	</div>
 	
-	<div>
-		<p>Featured Titles</p>
+	<div class="bookSection">
+		<h1>Catch up with our blog</h1>
+		<div class="bookContainer">
+			<div class="bookElement">
+				<img src="" alt="Book description">
+				<h2>Book</h2>
+				<p>Author</p>
+			<div>
+		</div>
 	</div>
 	
-	<div>
-		<p>Upcoming Titles</p>
-	</div>
-	
-	<div>
-		<p>All time best sellers</p>
-	</div>
-	
-	<div>
-		<p>Nepali</p>
-	</div>
-	
-	<div>
-		<p>Hindi</p>
-	</div>
-	
-	<div>
-		<p>Bengali</p>
-	</div>
-	
-	<div>
-		<p>Fiction</p>
-	</div>
-	
-	<div>
-		<p>Non Fiction</p>
-	</div>
-	
-	<div>
-		<p>For the young readers</p>
-	</div>
-	
-	<div>
-		<p>Featured Artists</p>
+	<div class="artistSection">
+		<div class="artistContainer">
+			<div class="artistElement">
+			<div>
+		</div>
 	</div>
 	
 	<footer>
@@ -116,7 +73,7 @@
 		if ("serviceWorker" in navigator) {
 		navigator.serviceWorker.register("serviceworker.js");
 		}
-		});
+	});
 </script>
 </body>
 
