--- a/index.html
+++ b/index.html
@@ -29,43 +29,49 @@
 </head>
 
 <body>
+	
 	<nav id="navigation">
 		<img class="logoOfficial" src="" alt="The official logo of Bukant.">
 	</nav>
 	
-	<div class="categorySection">
-		<div class="categoryContainer">
-		</div>
-	</div>
+	<div>
 	
-	<div class="blogSection">
-		<h1>Catch up with our blog</h1>
-		<div class="blogContainer">
-			<img src="" alt="Blog image description">
-			<h2>Blog Description</h2>
-			<p>Read</p>
+		<div class="categorySection">
+			<div class="categoryContainer">
+			</div>
 		</div>
-	</div>
-	
-	<div class="bookSection">
-		<h1>Catch up with our blog</h1>
-		<div class="bookContainer">
-			<div class="bookElement">
-				<img src="" alt="Book description">
-				<h2>Book</h2>
-				<p>Author</p>
-			<div>
+
+		<div class="blogSection">
+			<h1>Catch up with our blog</h1>
+			<div class="blogContainer">
+				<img src="" alt="Blog image description">
+				<h2>Blog Description</h2>
+				<p>Read</p>
+			</div>
 		</div>
-	</div>
-	
-	<div class="artistSection">
-		<div class="artistContainer">
-			<div class="artistElement">
-			<div>
+
+		<div class="bookSection">
+			<h1>Catch up with our blog</h1>
+			<div class="bookContainer">
+				<div class="bookElement">
+					<img src="" alt="Book description">
+					<h2>Book</h2>
+					<p>Author</p>
+				<div>
+			</div>
 		</div>
+
+		<div class="artistSection">
+			<div class="artistContainer">
+				<div class="artistElement">
+				<div>
+			</div>
+		</div>
+				
 	</div>
 	
 	<footer>
+		<p>&copy; 2022 BUKANT</p>
 	</footer>
   
 <script>
@@ -75,6 +81,7 @@
 		}
 	});
 </script>
+			
 </body>
 
 </html>
