--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 		</div>
 
 		<div class="bookSection">
-			<h1>Catch up with our blog</h1>
+			<h1>latest Titles</h1>
 			<div class="bookContainer">
-				<div class="bookElement">
-					<img src="" alt="Book description">
-					<h2>Book</h2>
-					<p>Author</p>
-				<div>
+				<img src="" alt="Book description">
+				<h2>Book</h2>
+				<p>Author</p>
 			</div>
 		</div>
 
-		<div class="artistSection">
-			<div class="artistContainer">
-				<div class="artistElement">
-				<div>
+		<div class="authorSection">
+			<h1>Featured Author</h1>
+			<div class="authorContainer">
+				<img src="" alt="Author name">
+				<h2>Author name</h2>
+				<p>View Works</p>
 			</div>
 		</div>
 				
