--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 <body>
 	
 	<nav id="navigation">
+		<div id="menu" onclick="navigationDraw()">
+			<div id="bar1"></div>
+			<div id="bar2"></div>
+			<div id="bar3"></div>
+		</div>
 		<img class="logoOfficial" src="" alt="The official logo of Bukant.">
 	</nav>
 	
@@ -80,6 +85,8 @@
 		navigator.serviceWorker.register("serviceworker.js");
 		}
 	});
+
+
 </script>
 			
 </body>
