--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<div class="categoriesHeader">
 				<h1>Books</h1>
 				<div class="categoriesExtender">
-					<div id="categoriesExtenderBar1"></div>
-					<div id="categoriesExtenderBar2"></div>
+					<div id="bookCategoryIcon1" class="categoriesExtenderBar1"></div>
+					<div id="bookCategoryIcon2" class="categoriesExtenderBar2"></div>
 				</div>
 			</div>
 			<div id="bookCategory" class="categoriesSub">
@@ -63,8 +63,8 @@
 			<div class="categoriesHeader">
 				<h1>Authors</h1>
 				<div class="categoriesExtender">
-					<div id="categoriesExtenderBar1"></div>
-					<div id="categoriesExtenderBar2"></div>
+					<div id="authorCategoryIcon1" class="categoriesExtenderBar1"></div>
+					<div id="authorCategoryIcon2" class="categoriesExtenderBar2"></div>
 				</div>
 			</div>
 			<div id="authorCategory" class="categoriesSub">
