--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	</nav>
 
 	<div id="categories">
-		<div class="categoriesContainer" onclick="categoryExtend('book')">
-			<div class="categoriesHeader">
+		<div class="categoriesContainer">
+			<div class="categoriesHeader" onclick="categoryExtend('book')">
 				<h1>Books</h1>
 				<div class="categoriesExtender">
 					<div id="bookCategoryIcon1" class="categoriesExtenderBar1"></div>
@@ -59,8 +59,8 @@
 				<p>View All</p>
 			</div>
 		</div>
-		<div class="categoriesContainer" onclick="categoryExtend('author')">
-			<div class="categoriesHeader">
+		<div class="categoriesContainer">
+			<div class="categoriesHeader"onclick="categoryExtend('author')">
 				<h1>Authors</h1>
 				<div class="categoriesExtender">
 					<div id="authorCategoryIcon1" class="categoriesExtenderBar1"></div>
