--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<meta name="description" content="The production website of the Bukant." />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:creator" content="@anxsion" />
-	<meta name="theme-color" content="darkturquoise" />
-	<meta name="msapplication-navbutton-color" content="darkturquoise" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="darkturquoise" />
+	<meta name="theme-color" content="white" />
+	<meta name="msapplication-navbutton-color" content="white" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="white" />
 	<meta property="og:title" content="Bukant" />
 	<meta property="og:site_name" content="Bukant" />
 	<meta property="og:type" content="website" />
@@ -29,69 +29,65 @@
 	<script src="js/script.js"></script>
 </head>
 
-<body id="body">
-
-	<nav id="navigation">
-		<div class="navigationContainer">
-			<div id="menu" onclick="navigationDraw()">
-				<div id="bar1"></div>
-				<div id="bar2"></div>
-				<div id="bar3"></div>
-			</div>
-		</div>
-		<div class="navigationContainer">
-			<div class="logoOfficial"></div>
-		</div>
+<body>
+	<nav>
+		<p>@</p>
+		<p>@</p>
+		<p>@</p>
 	</nav>
 
-	<div id="layerHider"></div>
-
-	<div id="categories">
-		<div class="categoriesHeader" onclick="categoryExtend('book')">
-			<h1 id="categoriesHeaderBook">Books</h1>
-			<div class="categoriesExtender">
-				<div id="bookCategoryIcon1" class="categoriesExtenderBar1"></div>
-				<div id="bookCategoryIcon2" class="categoriesExtenderBar2"></div>
-			</div>
-		</div>
-		<div id="bookCategory" class="categoriesSub">
-			<p>Fiction</p>
-			<p>Non-Fiction</p>
-			<p>Children</p>
-			<p>View All</p>
-		</div>
-		<div class="categoriesHeader" onclick="categoryExtend('author')">
-			<h1 id="categoriesHeaderAuthor">Author</h1>
-			<div class="categoriesExtender">
-				<div id="authorCategoryIcon1" class="categoriesExtenderBar1"></div>
-				<div id="authorCategoryIcon2" class="categoriesExtenderBar2"></div>
-			</div>
-		</div>
-		<div id="authorCategory" class="categoriesSub">
-			<p>Fiction</p>
-			<p>Non-Fiction</p>
-			<p>Children</p>
-			<p>View All</p>
-		</div>
-		<div class="categoriesHeader" onclick="categoryExtend('about')">
-			<h1 id="categoriesHeaderAbout">About us</h1>
-			<div class="categoriesExtender">
-				<div id="aboutCategoryIcon1" class="categoriesExtenderBar1"></div>
-				<div id="aboutCategoryIcon2" class="categoriesExtenderBar2"></div>
-			</div>
-		</div>
-		<div id="aboutCategory" class="categoriesSub">
-			<p>Category 1</p>
-			<p>Catrgory 2</p>
-			<p>View All</p>
-			<p>Category 1</p>
-			<p>Catrgory 2</p>
-			<p>View All</p>
-		</div>
+	<div class="categoriesMobile">
+		<p>@</p>
+		<p>@</p>
+		<p>@</p>
+		<p>@</p>
 	</div>
 
-	<main id="mainContent">
+	<main>
+		<section>
+			<h1>Featured Titles</h1>
+			<div class="rails">
+				<div class="cards">
+					<div class="cardsDetail">
+						<p>Book Name</p>
+						<p>Author Name</p>
+						<p>Rs. 1599</p>
+						<button class="cardsButton">View</button>
+						<button class="cardsButton">Add to cart</button>
+					</div>
+				</div>
+			</div>
+		</section>
 
+		<section>
+			<h1>Featured Titles</h1>
+			<div class="rails">
+				<div class="cards">
+					<div class="cardsDetail">
+						<p>Book Name</p>
+						<p>Author Name</p>
+						<p>Rs. 1599</p>
+						<button class="cardsButton">View</button>
+						<button class="cardsButton">Add to cart</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<h1>Featured Titles</h1>
+			<div class="rails">
+				<div class="cards">
+					<div class="cardsDetail">
+						<p>Book Name</p>
+						<p>Author Name</p>
+						<p>Rs. 1599</p>
+						<button class="cardsButton">View</button>
+						<button class="cardsButton">Add to cart</button>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer></footer>
