--- a/index.html
+++ b/index.html
@@ -29,18 +29,23 @@
 	<script src="js/script.js"></script>
 </head>
 
-<body>
+<body id="body">
 	<nav>
-		<p>@</p>
-		<p>@</p>
-		<p>@</p>
+		<div class="menu" onclick="openDrawer()">
+			<div id="menubar1"></div>
+			<div id="menubar2"></div>
+		</div>
+		<p>BUKANT</p>
+		<img src ="asset/icon/myCart.svg" alt="My Cart Svg"/>
+
+		</svg>
 	</nav>
 
-	<div class="categoriesMobile">
-		<p>@</p>
-		<p>@</p>
-		<p>@</p>
-		<p>@</p>
+	<div id="categoriesMobile">
+		<p>Books +</p>
+		<p>Author +</p>
+		<p>About us +</p>
+		<p>Arts and Craft +</p>
 	</div>
 
 	<main>
@@ -48,42 +53,377 @@
 			<h1>Featured Titles</h1>
 			<div class="rails">
 				<div class="cards">
+					<div class="cardsCover"></div>
 					<div class="cardsDetail">
-						<p>Book Name</p>
-						<p>Author Name</p>
-						<p>Rs. 1599</p>
-						<button class="cardsButton">View</button>
-						<button class="cardsButton">Add to cart</button>
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<section>
-			<h1>Featured Titles</h1>
+			<h1>Latest Releases</h1>
 			<div class="rails">
 				<div class="cards">
+					<div class="cardsCover"></div>
 					<div class="cardsDetail">
-						<p>Book Name</p>
-						<p>Author Name</p>
-						<p>Rs. 1599</p>
-						<button class="cardsButton">View</button>
-						<button class="cardsButton">Add to cart</button>
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<section>
-			<h1>Featured Titles</h1>
+			<h1>Upcoming Titles</h1>
 			<div class="rails">
 				<div class="cards">
+					<div class="cardsCover"></div>
 					<div class="cardsDetail">
-						<p>Book Name</p>
-						<p>Author Name</p>
-						<p>Rs. 1599</p>
-						<button class="cardsButton">View</button>
-						<button class="cardsButton">Add to cart</button>
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<h1>Children</h1>
+			<div class="rails">
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="cards">
+					<div class="cardsCover"></div>
+					<div class="cardsDetail">
+						<div class="cardsDetailAlpha">
+							<p>Book Name</p>
+							<p>Author Name</p>
+							<p>Rs. 1599</p>
+						</div>
+						<div class="cardsDetailBeta">
+							<button class="cardsButton">View</button>
+							<button class="cardsButton">Add to cart</button>
+						</div>
 					</div>
 				</div>
 			</div>
