--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="author" content="AnxSion" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="The production website of the Bukant." />
+	<meta name="description" content="The prototype website of the Bukant." />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:creator" content="@anxsion" />
 	<meta name="theme-color" content="white" />
@@ -17,28 +17,31 @@
 	<meta property="og:site_name" content="Bukant" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="image/" />
-	<meta property="og:url" content="The production website of the Bukant." />
-	<meta property="og:description" content="Description" />
+	<meta property="og:url" content="BUKANT" />
+	<meta property="og:description" content="The prototype website of the Bukant." />
 	<link rel="canonical" href="https://www.bukant.com/" />
 	<link rel="manifest" href="manifest.webmanifest" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
-	<link rel="stylesheet" href="css/iconBuffer.css" type="text/css" />
 	<link rel="preload" href="css/style.css" as="style" />
-	<link rel="shortcut icon" href="image/" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="image/" />
+	<link rel="shortcut icon" href="" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="" />
 	<script src="js/script.js"></script>
 </head>
 
 <body id="body">
+
 	<nav>
 		<div class="menu" onclick="openDrawer()">
 			<div id="menubar1"></div>
 			<div id="menubar2"></div>
 		</div>
 		<p>BUKANT</p>
-		<img src ="asset/icon/myCart.svg" alt="My Cart Svg"/>
-
-		</svg>
+		<div class="cartIconContainer">
+			<div class="cartCounter">
+				<p id="cartCounterDisplay">1</p>
+			</div>
+			<img src ="asset/icon/myCart.svg" alt="My Cart Svg"/>
+		</div>
 	</nav>
 
 	<div id="categoriesMobile">
@@ -62,7 +65,7 @@
 						</div>
 						<div class="cardsDetailBeta">
 							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
+							<button class="cardsAdd" onclick="addToCart()">Add to cart</button>
 						</div>
 					</div>
 				</div>
@@ -77,7 +80,7 @@
 						</div>
 						<div class="cardsDetailBeta">
 							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
+							<button class="cardsAdd" onclick="addToCart()">Add to cart</button>
 						</div>
 					</div>
 				</div>
@@ -92,7 +95,7 @@
 						</div>
 						<div class="cardsDetailBeta">
 							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
+							<button class="cardsAdd">Add to cart</button>
 						</div>
 					</div>
 				</div>
@@ -107,7 +110,7 @@
 						</div>
 						<div class="cardsDetailBeta">
 							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
+							<button class="cardsAdd">Add to cart</button>
 						</div>
 					</div>
 				</div>
@@ -122,7 +125,7 @@
 						</div>
 						<div class="cardsDetailBeta">
 							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
+							<button class="cardsAdd">Add to cart</button>
 						</div>
 					</div>
 				</div>
@@ -137,292 +140,7 @@
 						</div>
 						<div class="cardsDetailBeta">
 							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<h1>Latest Releases</h1>
-			<div class="rails">
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<h1>Upcoming Titles</h1>
-			<div class="rails">
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<h1>Children</h1>
-			<div class="rails">
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsButton">Add to cart</button>
+							<button class="cardsAdd">Add to cart</button>
 						</div>
 					</div>
 				</div>
