--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			<div id="menubar1"></div>
 			<div id="menubar2"></div>
 		</div>
-		<p>BUKANT</p>
-		<div class="cartIconContainer">
+		<p onclick="home(0)">BUKANT</p>
+		<div id="cartIconContainer" onclick="accessCart()">
 			<div class="cartCounter">
 				<p id="cartCounterDisplay">1</p>
 			</div>
@@ -49,102 +49,68 @@
 		<p>Author +</p>
 		<p>About us +</p>
 		<p>Arts and Craft +</p>
+		<a href="page/account.html">Account</a>
 	</div>
 
 	<main>
 		<section>
 			<h1>Featured Titles</h1>
 			<div class="rails">
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
 						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsAdd" onclick="addToCart()">Add to cart</button>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="accessCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
 
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
 						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsAdd" onclick="addToCart()">Add to cart</button>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="accessCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
 
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
 						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsAdd">Add to cart</button>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton">Add to Cart</button>
 						</div>
 					</div>
 				</div>
 
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
 						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsAdd">Add to cart</button>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton">Add to Cart</button>
 						</div>
 					</div>
 				</div>
 
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsAdd">Add to cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="cards">
-					<div class="cardsCover"></div>
-					<div class="cardsDetail">
-						<div class="cardsDetailAlpha">
-							<p>Book Name</p>
-							<p>Author Name</p>
-							<p>Rs. 1599</p>
-						</div>
-						<div class="cardsDetailBeta">
-							<button class="cardsButton">View</button>
-							<button class="cardsAdd">Add to cart</button>
-						</div>
-					</div>
-				</div>
 			</div>
+
 		</section>
 	</main>
 
