--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<p>Author +</p>
 		<p>About us +</p>
 		<p>Arts and Craft +</p>
-		<a href="page/account.html">Account</a>
+		<p onclick="window.open('page/account.html','_parent')">Account</p>
 	</div>
 
 	<main>
@@ -108,7 +108,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 
 		</section>
