--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 			<div id="menubar2"></div>
 		</div>
 		<p onclick="home(0)">BUKANT</p>
-		<div id="cartIconContainer" onclick="accessCart()">
-			<div class="cartCounter">
-				<p id="cartCounterDisplay">1</p>
+		<div id="cartIconContainer" onclick="accessCart(1)">
+			<div id="cartCounter">
+				<p id="cartCounterDisplay"></p>
 			</div>
 			<img src ="asset/icon/myCart.svg" alt="My Cart Svg"/>
 		</div>
@@ -65,7 +65,7 @@
 						</div>
 						<div class="bookDetailBeta">
 							<button class="bookButton">View</button>
-							<button class="bookButton" onclick="accessCart()">Add to Cart</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 						</div>
 						<div class="bookDetailBeta">
 							<button class="bookButton">View</button>
-							<button class="bookButton" onclick="accessCart()">Add to Cart</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 						</div>
 						<div class="bookDetailBeta">
 							<button class="bookButton">View</button>
-							<button class="bookButton">Add to Cart</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
@@ -104,7 +104,7 @@
 						</div>
 						<div class="bookDetailBeta">
 							<button class="bookButton">View</button>
-							<button class="bookButton">Add to Cart</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
@@ -114,7 +114,9 @@
 	</main>
 
 	<footer></footer>
-	
+	<script>
+		checkCart();
+	</script>
 </body>
 
 </html>
