Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -191,6 +191,118 @@
 			</div>
 
 		</section>
+
+		<section>
+			<h1>Bookshelf 1</h1>
+			<div class="rails">
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="bookCover"></div>
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</section>
+
 	</main>
 
 	<footer></footer>
