modified:   index.html 	modified:   page/account.html 	modified:   page/cart.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 			<p>Fiction</p>
 			<p>Non-Fiction</p>
 			<p>Children</p>
-			<p>Language based</p>
+			<p>Poetry</p>
+			<p>Translations</p>
 		</div>
 
 		<p class="categoriesTitle">Authors</p>
