--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 
 		<p class="categoriesTitle">Authors</p>
 
+		<p class="categoriesTitle" onclick="window.open('page/poster.html','_parent')">Poster Poetry</p>
+
 		<p class="categoriesTitle" onclick="window.open('page/blog.html','_parent')">Blog</p>
 
 		<p class="categoriesTitle" onclick="window.open('page/account.html','_parent')">Account</p>
