--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 		<p class="categoriesTitle">Authors</p>
 
-		<p class="categoriesTitle" onclick="window.open('page/poster.html','_parent')">Poster Poetry</p>
+		<p class="categoriesTitle" onclick="window.open('page/poster.html','_parent')">Poster Kavita</p>
 
 		<p class="categoriesTitle" onclick="window.open('page/blog.html','_parent')">Blog</p>
 
