--- a/index.html
+++ b/index.html
@@ -76,14 +76,19 @@
 
 		<p class="categoriesTitle" onclick="window.open('page/account.html','_parent')">Account</p>
 
-		
 	</div>
 
 	<main>
 		<section>
-			<h1>Featured Titles</h1>
-			<div class="rails">
+			<div class="displayBanner" onclick="window.open('page/poster.html','_parent')">
+				<img  src="asset/banner/posterKatha.jpg" alt="Poetry Katha Banner">
+			</div>
+		</section>
 
+		<section>
+			<h1>Featured Titles</h1>
+
+			<div class="rails">
 				<div class="card">
 					<div class="bookCover"></div>
 					<div class="bookDetail">
@@ -91,7 +96,7 @@
 							<p>Rs. 150</p>
 						</div>
 						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/book.html','_parent')">View</button>
+							<button class="bookButton" onclick="window.open('page/books/book.html','_parent')">View</button>
 							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
