--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Hand coded with love <3 by anxsion -->
 
 <head>
-	<title>Bukant</title>
+	<title>BukAnt</title>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="author" content="AnxSion" />
@@ -24,8 +24,8 @@
 	<link rel="manifest" href="manifest.webmanifest" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	<link rel="preload" href="css/style.css" as="style" />
-	<link rel="shortcut icon" href="" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="" />
+	<link rel="shortcut icon" href="asset/icon/favicon" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="asset/icon/favicon" />
 	<script src="js/script.js"></script>
 </head>
 
@@ -71,7 +71,7 @@
 			<p>Craft</p>
 		</div>
 
-		<p class="categoriesTitle">Authors</p>
+		<p class="categoriesTitle" onclick="window.open('page/author.html','_parent')">Authors</p>
 
 		<p class="categoriesTitle" onclick="window.open('page/poster.html','_parent')">Poster Kavita</p>
 
@@ -90,7 +90,7 @@
 		
 
 		<section>
-			<h1>BUKANT Exclusive</h1>
+			<h1>BukAnt Titles</h1>
 
 			<div class="rails">
 				<div class="card">
@@ -529,7 +529,6 @@
 		<p onclick="window.open('page/privacypolicy.html','_parent')">Privacy Policy</p>
 		<p onclick="window.open('page/terms.html','_parent')">Terms</p>
 		<p onclick="window.open('page/refunds.html','_parent')">Refunds</p>
-		<p onclick="window.open('page/shipping.html','_parent')">Shipping</p>
 	</div>
 
 	<footer></footer>
