--- a/index.html
+++ b/index.html
@@ -85,12 +85,10 @@
 
 		<div class="bukantBanner">
 			<img  src="asset/icon/logoMain" alt="Bukant banner">
-		</div>
-
-		
+		</div>		
 
 		<section>
-			<h1>BukAnt Titles</h1>
+			<h1>Bukant Titles</h1>
 
 			<div class="rails">
 
